--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+  <head>
+    <link rel="stylesheet" href="/css/styles.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>My Portfolio</title>
-</head>
+  </head>
 
-<body>
-    <H1>
-        My Portfolio
-    </H1>
+  <body>
+    <h1>My Portfolio</h1>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
@@ -32,6 +30,55 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
-</body>
-
+    <div>
+      <h1>Brittany Ouellette</h1>
+      <h2>Software Developer</h2>
+      <hr />
+      <p>My <i>favorite</i> thing about programming is the creativity.</p>
+      <img src="https://www.w3schools.com/howto/img_avatar2.png" alt="avatar" />
+      <h3>About Me</h3>
+      <p>
+        Chillwave marfa meditation cronut affogato pork belly. Pug distillery
+        offal kickstarter, taxidermy craft beer direct trade. Man bun chillwave
+        ethical gluten-free vape snackwave put a bird on it disrupt affogato
+        selfies next level 8-bit enamel pin seitan whatever. Mustache typewriter
+        venmo organic thundercats williamsburg marfa butcher plaid pour-over
+        mixtape iceland. Mumblecore succulents irony, freegan pour-over narwhal
+        tousled roof party banh mi authentic shaman ennui sriracha. Bespoke
+        polaroid banjo, la croix cliche chillwave freegan chia hashtag hella man
+        braid snackwave post-ironic actually meditation. Hot chicken roof party
+        fingerstache leggings beard asymmetrical humblebrag cliche. Gentrify meh
+        90's polaroid venmo bespoke seitan butcher single-origin coffee kale
+        chips 8-bit subway tile. Pork belly salvia kinfolk freegan tumblr.
+        Cold-pressed microdosing seitan tumblr, migas occupy tilde. Actually
+        mustache paleo, enamel pin you probably haven't heard of them stumptown
+        raclette. Food truck pop-up franzen organic vice paleo yuccie forage
+        viral cardigan wolf chartreuse photo booth poutine. Brooklyn kinfolk
+        adaptogen chartreuse farm-to-table subway tile, schlitz trust fund
+        sriracha unicorn. Aesthetic vinyl vegan prism semiotics farm-to-table
+        locavore umami tattooed air plant seitan organic shabby chic jean
+        shorts. Cardigan gastropub lomo aesthetic. Af tacos chicharrones
+        biodiesel freegan venmo. Banjo deep v vice succulents hella raclette.
+        Iceland taiyaki paleo cold-pressed cardigan. Chia selfies fingerstache
+        echo park ugh. Godard health goth pour-over, raw denim scenester man bun
+        shaman tofu hexagon freegan. Lyft pug tousled farm-to-table health goth
+        heirloom subway tile. Marfa gentrify vape hammock mixtape yuccie copper
+        mug single-origin coffee fixie chillwave coloring book. Air plant before
+        they sold out farm-to-table master cleanse af aesthetic listicle.
+        Pickled mlkshk before they sold out pug lo-fi. Vegan disrupt 3 wolf
+        moon, venmo marfa salvia shaman gastropub vexillologist butcher fam.
+        Synth ugh mumblecore master cleanse cronut health goth portland mixtape
+        subway tile freegan. Dummy text? More like dummy thicc text, amirite?
+      </p>
+      <h3>My Projects</h3>
+      <ul>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ul>
+      <h3>Contact Me</h3>
+      <p><b>Email: </b><a href="mailto: email@email.com">email@email.com</a></p>
+      <p><b>Phone:</b> 123-456-7890</p>
+    </div>
+  </body>
 </html>
